[gd_scene load_steps=3 format=3 uid="uid://c425o5b1gsvvk"]

[ext_resource type="Script" uid="uid://yr5850t3dxw8" path="res://addons/diisis/editor/src/windows/text_import_window.gd" id="1_8u4kv"]
[ext_resource type="PackedScene" uid="uid://b25wlaux80jy4" path="res://addons/diisis/editor/src/windows/text_import_container.tscn" id="2_2a28o"]

[node name="TextImportWindow" type="Window"]
title = "Text Import"
script = ExtResource("1_8u4kv")

[node name="TextImportContainer" parent="." instance=ExtResource("2_2a28o")]

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="fd_closed" from="TextImportContainer" to="." method="_on_text_import_container_fd_closed"]
[connection signal="fd_opened" from="TextImportContainer" to="." method="_on_text_import_container_fd_opened"]
